[package]
name = "vector_survivor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = [] }
bevy_asset_loader = "0.18.0"
#bevy_common_assets = { version = "0.8.0", features = ["ron", "toml"] }
#bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
bevy_vector_shapes = "0.6.0"
bevy_xpbd_2d = { version = "0.3.2", features = ["simd"] }
glidesort = "0.1.2"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }

[features]
default = []
dynamic_linking = ["bevy/dynamic_linking"]

[profile.release]
lto = true

[profile.web]
inherits = "release"
opt-level = "z"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
